添加配置选项